--- a/README
+++ b/README
@@ -1,2 +1,6 @@
-USAGE: $sh .pl drome_genes.gff drome_seq.fa                                                         ###
+* USAGE:
+
+     ```
+     $ sh .pl drome_genes.gff drome_seq.fa    
+     ```
 This program retrieve those substrings from a DNA sequence that are delimited by the start and end coordinates of a GFF record. It also calculates the GC content of each sequence and total GC content.
